c image slide little

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           <!-- <div class="hdr1 mb-5">XXXX XXXXXX XXXX</div> -->
           <!-- IMG START -->
           <img src="img/c1.png" class="img-fluid my-2" alt="...">
-          <a href="https://bit.ly/pesansekarangsibshop" target="_blank"><img src="img/c2.png" class="img-fluid my-3 px-5" alt="..."></a>
+          <a href="https://bit.ly/pesansekarangsibshop" target="_blank">
+          <img src="img/c2.png" class="img-fluid my-3 px-5" alt="..."></a>
           <img src="img/c3.png" class="img-fluid my-2" alt="...">
           <!-- VIDEO START-->
           <div class="cntnr2">
